--- a/todo_app/pubspec.yaml
+++ b/todo_app/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
 
   english_words: ^4.0.0
   provider: ^6.0.0
+  table_calendar: ^3.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
