--- a/todo_app/pubspec.yaml
+++ b/todo_app/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   intl: ^0.20.0
+  url_launcher: ^6.1.10
+  
+
+
 
 dev_dependencies:
   flutter_test:
