--- a/todo_app/pubspec.yaml
+++ b/todo_app/pubspec.yaml
@@ -39,7 +39,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   intl: ^0.20.0
   url_launcher: ^6.1.10
-  
+  file_picker: ^5.3.1
+  open_file: ^3.3.2
+  path: ^1.8.3
 
 
 
