--- a/todo_app/pubspec.yaml
+++ b/todo_app/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  intl: ^0.20.0
+  #intl: ^0.20.0
   url_launcher: ^6.1.10
   file_picker: ^5.3.1
   open_file: ^3.3.2
