--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "cmake.sourceDirectory": "C:/Users/sofiy/Documents/scolaire/SeoulTech/ASE/SeoulTech_ASE_Autumn2024_Group2/todo_app/windows"
+    "cmake.sourceDirectory": "F:/Documents/Cours-Scolaire/ENIB/S9 - SeoulTech/ASE/SeoulTech_ASE_Autumn2024_Group2/todo_app/windows"
 }
