--- a/todo_app/pubspec.yaml
+++ b/todo_app/pubspec.yaml
@@ -38,11 +38,13 @@ dependencies:
   # for date to string custom formatting
   intl: ^0.19.0
 
+  # for databese management
+  sqflite: ^2.4.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  #intl: ^0.20.0
+
   url_launcher: ^6.1.10
   file_picker: ^5.3.1
   open_file: ^3.3.2
