--- a/todo_app/pubspec.yaml
+++ b/todo_app/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
 
   provider: ^6.0.0
   table_calendar: ^3.0.9
-  text_to_speech: ^0.2.3
+  #text_to_speech: ^0.2.3
 
   # for date to string custom formatting
   intl: ^0.19.0
@@ -47,6 +47,14 @@ dependencies:
   file_picker: ^5.3.1
   open_file: ^3.3.2
   path: ^1.8.3
+
+  flutter_local_notifications: ^18.0.1 # ^17.2.1+2
+  timezone: ^0.9.2
+  device_info_plus: ^11.1.1
+  shared_preferences: ^2.3.3
+  windows_notification: ^1.3.0
+  permission_handler: ^11.0.0
+  flutter_timezone: ^1.0.8
 
 
 
