--- a/todo_app/pubspec.yaml
+++ b/todo_app/pubspec.yaml
@@ -33,8 +33,9 @@ dependencies:
 
   provider: ^6.0.0
   table_calendar: ^3.0.9
-  text_to_speech: ^0.2.3
+  #text_to_speech: ^0.2.3
   flutter_colorpicker: ^1.0.3
+  shared_preferences: ^2.2.2
 
   # for date to string custom formatting
   intl: ^0.19.0
