--- a/todo_app/pubspec.yaml
+++ b/todo_app/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   table_calendar: ^3.0.9
   #text_to_speech: ^0.2.3
   flutter_colorpicker: ^1.0.3
+  fl_chart: ^0.69.2
 
   # for date to string custom formatting
   intl: ^0.19.0
